Fail2ban should work with custom ips too, additionally fixed a couple of bugs
