# openapi3.0.yaml
@@ -284,6 +284,10 @@ components:
     Fail2banListItem:
       type: object
       properties:
+        bannedInCustom:
+          type: array
+          items:
+            type: string
         bannedInDovecot:
           type: array
           items:
